fix height on mobile

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ body{
 
 #bottom-section{
   width: 100%;
-  height: 55%;
   color: white;
   display: flex;
   flex-direction: column;
